--- a/styles/style.css
+++ b/styles/style.css
@@ -72,6 +72,7 @@ h2 {
   font-size: 2.75rem;
   margin-bottom: 2rem;
   font-weight: 500;
+  letter-spacing: -0.05rem;
 }
 
 .projects__subtitle {
